--- a/LuizaLabs-QuakeLogParser/Testes/.classpath
+++ b/LuizaLabs-QuakeLogParser/Testes/.classpath
@@ -16,5 +16,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry combineaccessrules="false" kind="src" path="/APIConsulta"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Parser"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
